@@ -1,3 +1,11 @@
+2004-11-21  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* dotemacs.el:
+	(dired-load-hook): use ediff from dired
+
+	* dotemacs-cust.el:
+	(custom-set-variables): omit only . (not ..) in dired mode
+
 2004-11-19  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* perso/graphviz-dot-mode.el:
